color contrast issue

--- a/src/ui-kit/experimental/hierarchical/hierarchical/hierarchical.component.scss
+++ b/src/ui-kit/experimental/hierarchical/hierarchical/hierarchical.component.scss
@@ -6,6 +6,6 @@
 }
 
 .advanced-link-disabled{
-  color: #d6d7d9;
+  color: #5b616b;
   cursor: not-allowed;
 }
